--- a/pythonProject/ReactDjango/frontend/static/css/App.css
+++ b/pythonProject/ReactDjango/frontend/static/css/App.css
@@ -233,6 +233,25 @@ aside {
     margin-right: 10%;
     margin-bottom: 5%;
 }
+
+ul.mylist, ol.mylist {
+    list-style: none;
+    margin: 0px;
+    padding: 0px;
+
+    max-width: 900px;
+    width: 100%;
+}
+
+ul.mylist li, ol.mylist li {
+    display: inline-block;
+    padding: 10px;
+    margin-bottom: 5px;
+    border: 1px solid #efefef;
+    font-size: 12px;
+    cursor: pointer;
+}
+
 /*-----margin-------*/
 
 .margin-top-10 {
